test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/conflicting2.build
defaults(
	example.echo
	Input: def
)
